# employ-Validation

./: CMakeLists.txt  employeValidation.cpp  function.cpp  function.h  isCitizen.cpp  learning.cpp  learning.h  learning_2.cpp  learning_2.h  multiThreading.cpp  multiThreading.h  opps.cpp  print_pid.cpp  print_pid.h  trainWindRestriction.cpp  trainWindRestriction.h
